# mergehell

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
crates/mergehell/: Cargo.toml
crates/mergehell/src/: cli.rs  diagnostic.rs  lib.rs  source.rs
crates/mergehell/src/commands/: binding.rs  control_flow.rs  functions.rs  import.rs  mod.rs  print.rs  rerere.rs  stdlib.rs
crates/mergehell/src/format/: mod.rs
crates/mergehell/src/git/: blame.rs  diff.rs  merge_driver.rs  mod.rs  status.rs
crates/mergehell/src/resolve/: mod.rs  rng.rs  strategy.rs
crates/mergehell/src/runtime/: context.rs  control.rs  eval.rs  mod.rs  value.rs
crates/mergehell/src/syntax/: ast.rs  line.rs  mod.rs  parser.rs
crates/mergehell/tests/: cli.rs
examples/: level1_variables.mh  level2_patch.mh
plan/: ARCH.md  IMPLEMENT.md  STATUS.md
tests/fixtures/: hello.mh  imported_message.mh  level1_function.mh  phase4_import.mh  phase4_resolve.mh  phase4_try.mh  phase4_type_error.mh
